Implement listener hooks for Deleter
Signed-off-by: rayshrey <rayshrey@amazon.com>